<resources>
    <string name="app_name" translatable="false">Steam Prototype</string>
    <string name="sign_in_text">Sign In</string>
    <string name="register_text">Register</string>
    <string name="welcome_text">Welcome to</string>
    <string name="or_text">or</string>
    <string name="register_page_text">Register a new account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_page_text">Sign in to your account</string>
    <string name="remember_me">Remember me</string>
    <string name="store_feature_text">FEATURED</string>
    <string name="search_bar_hint">Search</string>
    <string name="sort_new_button">New</string>
    <string name="sort_popular_button">Popular</string>
    <string name="sort_all_button">All</string>
    <string name="gameList_name">Name</string>
    <string name="gameList_genre">Genre</string>
    <string name="user_library">User Library</string>
    <string name="search_button_go">Go</string>
    <string name="developer_label">Developer:</string>
    <string name="publisher_label">Publisher:</string>
    <string name="genre_label">Genre:</string>
    <string name="release_date_label">Release Date:</string>
    <string name="select_language_label">Select Language</string>
    <string name="wishlist">Wishlist</string>
    <string name="menu_store">Store</string>
    <string name="menu_library">Library</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_log_out">Log out</string>
    <string name="game">Game</string>
    <string name="rate_dialog_message">Rate this game?</string>
    <string name="rate_dialog_notice">Note: a game can only be rated once a day</string>
    <string name="buy_button">Buy</string>
    <string name="add_to_wishlist_button">Add to Wishlist</string>
    <string name="rate_button">Rating:</string>
    <string name="rating_thank_message">Thank you for rating this game</string>
    <string name="buy_confirm_message">Do you want to buy this game?</string>
    <string name="buy_confirm_title">Confirm order</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rating_condition_message">You must own this game to rate it</string>
    <string name="rating_condition_message2">You already rated this game</string>
    <string name="price_free">Free</string>
    <string name="register_success_message">Register success now you will be direct to the store front</string>
    <string name="no_account_message">No account was found do you want to create one?</string>
    <string name="no_account_title">Cannot retrieve account data</string>
    <string name="username_password_empty">Username or password cannot be empty</string>
    <string name="username_contain_special_char">Username invalid, cannot contains special characters\n</string>
    <string name="password_not_long_enough">Password invalid, must be at least 6 characters long\n</string>
    <string name="username_password_not_match">Username or password do not match</string>
</resources>