<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2D2F31"
        android:text="@string/wishlist"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FEFEFE"
        android:orientation="horizontal">

        <com.example.steamprototype.customView.EditTextWithClear
            android:id="@+id/edit_wishsearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/search_bar_hint"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_wishsearch"
            android:layout_width="14dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/search_button_go" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_wishAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_all_button" />

    <ListView
        android:id="@+id/lstVWL"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>