<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#595B5D"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#313435"
        android:text="@string/user_library"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FEFEFE"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_librarysrch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search_bar_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_librarysrch"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#2196F3"
            android:text="@string/search_button_go" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_libraryall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_all_button" />

    <ListView
        android:id="@+id/lstVLib"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>